--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,11 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+@*         <div class="nav-item px-3">
             <NavLink class="nav-link" href="sinhvien">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Quản lý sinh viên
             </NavLink>
-        </div>
+        </div> *@
     </nav>
 </div>
 
