--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,19 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
 <PageTitle>MyProject</PageTitle>
-
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>       
+<div class="container-fluid d-flex flex-column vw-100 vh-100">
+    <main class="flex-fill container-fluid">
+        @Body
     </main>
 </div>
