--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -2,6 +2,8 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    height: 100%;
+    margin: 0;
 }
 
 h1:focus {
@@ -81,4 +83,8 @@ a, .btn-link {
     .flex-column, .navbar-brand {
         padding-left: env(safe-area-inset-left);
     }
+}
+
+.div-border {
+    border: 1px solid #11a9a9;
 }
